[package]
name = "reth-enclave"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Additional utilities for working with enclave in reth."

[lints]
workspace = true

[dependencies]
alloy-rlp = { workspace = true, features = ["arrayvec"] }
seismic-enclave.workspace = true

anyhow = "1.0"
derive_more.workspace = true
once_cell.workspace = true
serde_json = {workspace = true}
serde = { workspace = true, features = ["derive"]}
tracing.workspace = true

hyper = { version = "0.14", features = ["full"] }
routerify = "3.0.0"
reqwest.workspace = true
tokio = { workspace = true, features = ["full"] }
warp = "0.3"

aes-gcm = "0.10"
hkdf = "0.12"
secp256k1 = {workspace = true, features = ["rand", "recovery", "std", "serde"]}
sha2 = "0.10"
futures = "0.3.12"
eyre.workspace = true


[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }
