[package]
name = "seismic-tee-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Additional utilities for working with Tokio in reth."

[lints]
workspace = true

[dependencies]
tracing.workspace = true
hyper = { workspace = true, features = ["full"] } 
reqwest = { workspace = true}
warp = "0.3"
anyhow = "1.0"

serde_json = {workspace = true}
secp256k1 = {workspace = true, features = ["rand", "recovery", "std", "serde"]}
serde = { workspace = true, features = ["derive"]}

# async
tokio = { workspace = true, features = ["sync", "macros"] }
tokio-stream = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }