[package]
name = "reth-seismic-chainspec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "EVM chain spec implementation for optimism."

[lints]
workspace = true

[dependencies]
# reth
reth-chainspec.workspace = true
reth-ethereum-forks.workspace = true
reth-primitives-traits.workspace = true
reth-network-peers.workspace = true

# seismic-reth
reth-seismic-primitives.workspace = true
reth-seismic-forks.workspace = true

# ethereum
alloy-chains.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-hardforks.workspace = true

# op
seismic-alloy-rpc-types.workspace = true
seismic-alloy-consensus.workspace = true

# io
serde_json.workspace = true

# misc
thiserror.workspace = true
derive_more.workspace = true
once_cell.workspace = true

[dev-dependencies]
reth-chainspec = { workspace = true, features = ["test-utils"] }
alloy-genesis.workspace = true
seismic-alloy-rpc-types.workspace = true

[features]
default = ["std"]
std = [
    "alloy-chains/std",
    "alloy-genesis/std",
    "alloy-primitives/std",
    "alloy-eips/std",
    "seismic-alloy-rpc-types/std",
    "reth-chainspec/std",
    "reth-ethereum-forks/std",
    "reth-primitives-traits/std",
    "reth-seismic-primitives/std",
    "alloy-consensus/std",
    "once_cell/std",
    "derive_more/std",
    "reth-network-peers/std",
    "thiserror/std",
    "serde_json/std",
    "seismic-alloy-consensus/std",
]
