[package]
name = "reth-seismic-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-static-file-types = { workspace = true, features = ["clap"] }
reth-cli-commands.workspace = true
reth-consensus.workspace = true
reth-primitives-traits.workspace = true
reth-db = { workspace = true, features = ["mdbx"] }
reth-db-api.workspace = true
reth-db-common.workspace = true
reth-downloaders.workspace = true
reth-provider.workspace = true
reth-prune.workspace = true
reth-stages.workspace = true
reth-static-file.workspace = true
reth-execution-types.workspace = true
reth-node-core.workspace = true
reth-fs-util.workspace = true

# so jemalloc metrics can be included
reth-node-metrics.workspace = true

## seismic
reth-seismic-primitives.workspace = true
reth-seismic-chainspec.workspace = true
reth-seismic-node.workspace = true

reth-chainspec.workspace = true
reth-node-events.workspace = true
reth-seismic-evm.workspace = true
reth-cli.workspace = true
reth-cli-runner.workspace = true
reth-node-builder.workspace = true
reth-tracing.workspace = true

# eth
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true

# misc
futures-util.workspace = true
derive_more.workspace = true
serde.workspace = true
clap = { workspace = true, features = ["derive", "env"] }

tokio = { workspace = true, features = [
    "sync",
    "macros",
    "time",
    "rt-multi-thread",
] }
tokio-util = { workspace = true, features = ["codec"] }
tracing.workspace = true
eyre.workspace = true

# reth test-vectors
proptest = { workspace = true, optional = true }
seismic-alloy-consensus.workspace = true

[dev-dependencies]
tempfile.workspace = true
reth-stages = { workspace = true, features = ["test-utils"] }
reth-db-common.workspace = true
reth-cli-commands.workspace = true

[features]
asm-keccak = [
    "alloy-primitives/asm-keccak",
    "reth-node-core/asm-keccak",
    "reth-seismic-node/asm-keccak",
]

# Jemalloc feature for vergen to generate correct env vars
jemalloc = ["reth-node-core/jemalloc", "reth-node-metrics/jemalloc"]

dev = ["dep:proptest", "reth-cli-commands/arbitrary"]

serde = [
    "alloy-consensus/serde",
    "alloy-eips/serde",
    "alloy-primitives/serde",
    "seismic-alloy-consensus/serde",
    "reth-execution-types/serde",
    "reth-seismic-primitives/serde",
    "reth-primitives-traits/serde",
]
