[package]
name = "reth-evm-seismic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
async-trait.workspace = true
reth-chainspec.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-node-api.workspace = true
reth-primitives.workspace = true
reth-node-ethereum.workspace = true
reth-node-builder.workspace = true
serde_json.workspace = true
eyre.workspace = true
reth-revm.workspace = true


[lints]
workspace = true
