[package]
name = "reth-helpers-seismic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
async-trait.workspace = true
alloy-dyn-abi.workspace = true
reth-primitives.workspace = true
reth-chainspec.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-types.workspace = true
reth-rpc-types-compat.workspace = true
reth-rpc-eth-types.workspace = true
secp256k1.workspace = true
serde_json.workspace = true




[lints]
workspace = true
