[package]
name = "seismic-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# seismic dependencies
seismic-rpc-api = { workspace = true, features = ["client"] }
seismic-enclave.workspace = true

reth-cli.workspace = true
reth-errors.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-node-builder.workspace = true
reth-chainspec.workspace = true
reth-payload-builder.workspace = true
reth-primitives.workspace = true
reth-evm.workspace = true
reth-revm.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-eth-types.workspace = true
reth-rpc-builder.workspace = true
reth-transaction-pool.workspace = true
reth-tracing.workspace = true
reth-trie-common.workspace = true
reth-trie-db.workspace = true
reth-network.workspace = true
reth-network-types.workspace = true
reth-enclave.workspace = true
reth-tasks.workspace = true
reth-node-core.workspace = true
reth-provider.workspace = true
reth-blockchain-tree.workspace = true
reth-beacon-consensus.workspace = true
reth-consensus-debug-client.workspace = true
reth-engine-util.workspace = true
reth-exex.workspace = true
reth-node-events.workspace = true
reth-rpc-engine-api.workspace = true
reth-storage-api.workspace = true
reth-engine-tree.workspace = true

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-network.workspace = true
alloy-rpc-types.workspace  = true
alloy-rpc-types-eth.workspace  = true
alloy-signer-local.workspace = true
alloy-dyn-abi.workspace = true
alloy-rlp.workspace = true

# misc
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
eyre.workspace = true
jsonrpsee = { workspace = true, features = ["server", "macros"] }
secp256k1 = {workspace = true, features = ["rand", "recovery", "std", "serde"]}
futures.workspace = true
tokio-stream.workspace = true
assert_cmd.workspace = true
reqwest.workspace = true
tempfile.workspace = true
once_cell.workspace = true

reth-e2e-test-utils.workspace = true
sysinfo = "0.29"

# dependencies for test_utils
k256.workspace = true
enr.workspace = true

[dev-dependencies]
reth-e2e-test-utils.workspace = true
assert_cmd.workspace = true
reqwest.workspace = true
arbitrary.workspace = true
tempfile.workspace = true
once_cell.workspace = true
alloy-provider.workspace = true
alloy-sol-types.workspace = true
alloy-dyn-abi.workspace = true
alloy-json-abi = { version = "0.8.15" }
alloy-eips.workspace = true
