[package]
name = "reth-seismic-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
seismic-enclave.workspace = true

# seismic-reth
reth-seismic-payload-builder.workspace = true
reth-seismic-evm.workspace = true
reth-seismic-rpc.workspace = true
reth-seismic-txpool.workspace = true
reth-seismic-chainspec.workspace = true
reth-seismic-primitives = { workspace = true, features = ["serde", "serde-bincode-compat", "reth-codec"] }


# reth
reth-chainspec.workspace = true
reth-db = { workspace = true}
reth-engine-local = { workspace = true}
reth-primitives-traits.workspace = true
reth-payload-builder.workspace = true
reth-payload-util.workspace = true
reth-payload-validator.workspace = true
reth-consensus.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-tracing.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true
reth-network.workspace = true
reth-evm.workspace = true
reth-revm = { workspace = true, features = ["std"] }
reth-trie-db.workspace = true
reth-rpc-server-types.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-eth-types.workspace = true
reth-tasks = { workspace = true, optional = true }
reth-trie-common.workspace = true
reth-node-core.workspace = true
reth-rpc-engine-api.workspace = true
reth-rpc-api.workspace = true
reth-node-ethereum.workspace = true
reth-payload-primitives.workspace = true
reth-engine-primitives.workspace = true
reth-rpc.workspace = true
reth-rpc-builder.workspace = true
reth-ethereum-payload-builder.workspace = true

# revm with required optimism features
revm = { workspace = true, features = ["secp256k1", "blst", "c-kzg"] }
seismic-revm = { workspace = true }

# ethereum
alloy-eips.workspace = true
alloy-primitives.workspace = true
seismic-alloy-consensus.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-consensus.workspace = true

# misc
clap.workspace = true
serde.workspace = true
eyre.workspace = true

# rpc
serde_json.workspace = true

# test-utils dependencies
reth-e2e-test-utils = { workspace = true }
alloy-genesis = { workspace = true }
alloy-rpc-types = { workspace = true }
tokio = { workspace = true }
alloy-dyn-abi = { workspace = true }
alloy-signer-local = { workspace = true }
jsonrpsee = { workspace = true }
jsonrpsee-core = { workspace = true }
k256 = { workspace = true }
enr = { workspace = true }
reth-network-api = { workspace = true }
reth-enclave = { workspace = true }
reth-primitives = { workspace = true }
secp256k1 = { workspace = true }
seismic-alloy-rpc-types = { workspace = true }
seismic-alloy-network = { workspace = true }
seismic-alloy-provider = { workspace = true }
alloy-network = { workspace = true }
alloy-json-abi = { workspace = true }
alloy-provider = { workspace = true }
alloy-sol-types = { workspace = true }
tempfile = { workspace = true }
once_cell.workspace = true

[dev-dependencies]
reth-seismic-node = { workspace = true, features = ["test-utils"] }
reth-db.workspace = true
reth-node-core.workspace = true
reth-node-builder = { workspace = true, features = ["test-utils"] }
reth-provider = { workspace = true, features = ["test-utils"] }
reth-revm = { workspace = true, features = ["test-utils"] }
reth-tasks.workspace = true

alloy-primitives.workspace = true
seismic-alloy-consensus.workspace = true
alloy-consensus.workspace = true
futures.workspace = true

[features]
default = ["reth-codec"]
asm-keccak = [
    "alloy-primitives/asm-keccak",
    "revm/asm-keccak",
    "reth-seismic-node/asm-keccak",
    "reth-node-core/asm-keccak",
]
js-tracer = [
    "reth-node-builder/js-tracer",
]
test-utils = [
    "reth-tasks",
    "reth-node-builder/test-utils",
    "reth-chainspec/test-utils",
    "reth-consensus/test-utils",
    "reth-evm/test-utils",
    "reth-network/test-utils",
    "reth-payload-builder/test-utils",
    "reth-revm/test-utils",
    "reth-db/test-utils",
    "reth-provider/test-utils",
    "reth-transaction-pool/test-utils",
    "reth-trie-db/test-utils",
    "reth-seismic-node/test-utils",
    "reth-seismic-primitives/arbitrary",
    "reth-primitives-traits/test-utils",
    "reth-trie-common/test-utils",
]
reth-codec = [
    "reth-seismic-primitives/reth-codec",
]
