[package]
name = "reth-seismic-payload-builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A payload builder for seismic-reth that builds optimistic payloads."

[lints]
workspace = true

[dependencies]
# reth
reth-chainspec.workspace = true
reth-primitives-traits.workspace = true
reth-revm = { workspace = true, features = ["witness"] }
reth-transaction-pool.workspace = true
reth-storage-api.workspace = true
reth-evm.workspace = true
reth-execution-types.workspace = true
reth-payload-builder.workspace = true
reth-payload-builder-primitives.workspace = true
reth-payload-util.workspace = true
reth-payload-primitives = { workspace = true}
reth-basic-payload-builder.workspace = true
reth-chain-state.workspace = true
reth-payload-validator.workspace = true
reth-enclave.workspace = true

# seismic-reth
reth-seismic-evm.workspace = true
reth-seismic-primitives = {workspace = true, features = ["serde", "serde-bincode-compat", "reth-codec", "arbitrary"] }
reth-ethereum-primitives = {workspace = true, features = ["serde", "serde-bincode-compat", "reth-codec"] }
reth-seismic-txpool.workspace = true
reth-errors.workspace = true

# ethereum
revm.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-engine = { workspace = true, features = ["serde"] }
seismic-alloy-consensus.workspace = true
alloy-rpc-types-debug.workspace = true
alloy-consensus.workspace = true

# misc
derive_more.workspace = true
tracing.workspace = true
thiserror.workspace = true
sha2.workspace = true

[dev-dependencies]
seismic-enclave.workspace = true
reth-trie-common.workspace = true
alloy-evm.workspace = true
reth-storage-errors.workspace = true
reth-execution-errors.workspace = true
proptest.workspace = true
proptest-arbitrary-interop.workspace = true