[package]
name = "seismic-rpc-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Seismic RPC API"

[lints]
workspace = true

[dependencies]
reth-tracing.workspace = true
reth-rpc-eth-types.workspace = true
reth-rpc-eth-api.workspace = true
reth-node-core.workspace = true
reth-rpc-server-types.workspace = true
reth-enclave.workspace = true

seismic-enclave.workspace = true

alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-dyn-abi.workspace = true

jsonrpsee = { workspace = true, features = ["server", "macros"] }
secp256k1.workspace = true
tokio = { workspace = true, features = ["full"] }
thiserror.workspace = true

[dev-dependencies]
alloy-rpc-types-engine.workspace = true

reth-rpc-builder.workspace = true
reth-transaction-pool = { workspace = true, features = ["test-utils"] }
reth-network-api.workspace = true
reth-tasks.workspace = true
reth-chain-state.workspace = true
reth-beacon-consensus.workspace = true
reth-chainspec.workspace = true
reth-consensus.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-payload-builder = { workspace = true, features = ["test-utils"] }
reth-provider = { workspace = true, features = ["test-utils"] }
reth-rpc.workspace = true
reth-rpc-engine-api.workspace = true
reth-rpc-layer.workspace = true
reth-primitives.workspace = true

seismic-node.workspace = true


[features]
client = ["jsonrpsee/client", "jsonrpsee/async-client"]
